// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hitsPerPageSelector() calls twice ReactDOM.render(<Selector props />, container) 1`] = `
<HeaderFooter-AutoHide
  cssClasses={
    Object {
      "item": "ais-hits-per-page-selector--item custom-item",
      "root": "ais-hits-per-page-selector custom-root cx",
      "select": "ais-hits-per-page-selector custom-select",
    }
  }
  currentValue={10}
  options={
    Array [
      Object {
        "isRefined": true,
        "label": "10 results",
        "value": 10,
      },
      Object {
        "isRefined": false,
        "label": "20 results",
        "value": 20,
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;

exports[`hitsPerPageSelector() renders transformed items 1`] = `
<HeaderFooter-AutoHide
  cssClasses={
    Object {
      "item": "ais-hits-per-page-selector--item",
      "root": "ais-hits-per-page-selector",
      "select": "ais-hits-per-page-selector",
    }
  }
  currentValue={10}
  options={
    Array [
      Object {
        "isRefined": true,
        "label": "10 results",
        "transformed": true,
        "value": 10,
      },
      Object {
        "default": true,
        "isRefined": false,
        "label": "20 results",
        "transformed": true,
        "value": 20,
      },
    ]
  }
  setValue={[Function]}
  shouldAutoHideContainer={false}
/>
`;
